--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.omx"
+        applicationId "com.release.omx"
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
@@ -17,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
 }
 android {
     useLibrary 'org.apache.http.legacy'
@@ -28,7 +34,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.mikhaellopez:circularimageview:4.0.2'
+    implementation 'com.android.support:design:29.0.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
