--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:name=".InitApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".GenreListActivity"></activity>
+        <activity android:name=".MoviesActivity"></activity>
+        <activity android:name=".GenreListActivity" />
         <activity android:name=".LatestVideos" />
         <activity
             android:name=".PlayerActivity"
