--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:name=".InitApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
-        android:label=""
+        android:label="@string/app_name"
         android:roundIcon="@drawable/app_icon"
+
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
