--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,27 +1,45 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.release.omx"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
+    /*buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
+    }*/
 
     lintOptions {
 
         checkReleaseBuilds false
 
+    }
+
+    buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFile 'proguard-project.txt'
+        }
+        release {
+            minifyEnabled true
+            proguardFile 'proguard-project.txt'
+        }
     }
 }
 android {
@@ -31,6 +49,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+//    implementation project(name: "razorpay-android-3.8.8", ext: 'aar')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -49,5 +69,7 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
+    implementation 'com.razorpay:checkout:1.5.8'
+//    implementation 'com.android.support:customtabs:28.0.0'
 
 }
